k8s/infrastructure/vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: fablewhirl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      serviceAccountName: vault-sa
      volumes:
        - name: config
          configMap:
            name: vault-config
        - name: tls
          secret:
            secretName: vault-tls
        - name: data
          persistentVolumeClaim:
            claimName: vault-pvc
      containers:
        - name: vault
          image: hashicorp/vault:latest
          args:
            - "server"
            - "-config=/vault/config/vault.hcl"
          ports:
            - containerPort: 8200
              name: vault-port
          volumeMounts:
            - name: config
              mountPath: /vault/config
            - name: tls
              mountPath: /vault/config/tls
            - name: data
              mountPath: /vault/data

---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: fablewhirl
spec:
  type: ClusterIP
  selector:
    app: vault
  ports:
    - port: 8200
      targetPort: vault-port
      name: vault
